// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render table with full data should render a scrollable table 1`] = `
<div
  className="table-responsive mt-0 border-bottom scrollable"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render table with full data should render a styled table 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded bg-default"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render table with missing data should not render any data when no columns supplied 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr />
    </tbody>
  </table>
</div>
`;

exports[`render table with missing data should not render table at all 1`] = `null`;

exports[`render table with missing data should render data also for rows without the specified data path 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render table without data should not render anything 1`] = `null`;
